--- a/infra-setup/crossplane/base/providers/providers.yaml
+++ b/infra-setup/crossplane/base/providers/providers.yaml
@@ -18,13 +18,7 @@ metadata:
   name: provider-gcp-iam
 spec:
   package: xpkg.upbound.io/crossplane-contrib/provider-gcp-iam:v1.12.1
----
-apiVersion: pkg.crossplane.io/v1
-kind: Provider
-metadata:
-  name: provider-gcp-storage
-spec:
-  package: xpkg.upbound.io/crossplane-contrib/provider-gcp-storage:v1.12.1
+# GCP Storage provider removed - not needed on kind cluster
 ---
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
@@ -32,3 +26,4 @@ metadata:
   name: provider-gcp-beta-container
 spec:
   package: xpkg.upbound.io/upbound/provider-gcp-beta-container:v0.5.1
+# GitHub provider not needed on kind cluster
