--- a/infra-setup/flux/notification-provider.yaml
+++ b/infra-setup/flux/notification-provider.yaml
@@ -30,7 +30,7 @@ spec:
   eventSeverity: info
   eventSources:
   - kind: Kustomization
-    name: crossplane-claims
+    name: crossplane-composite-resources
     namespace: flux-system
   summary: "GKE Cluster provisioned by Crossplane"
   eventMetadata:
