--- a/infra-setup/crossplane/base/namespaces/kustomization.yaml
+++ b/infra-setup/crossplane/base/namespaces/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - gke-namespace.yaml
+  - ../../namespaces/gkecluster-mgmt-ns.yaml
+  - ../../namespaces/gkecluster-apps-dev-ns.yaml
