--- a/clusters/control-plane/flux-system/kustomization.yaml
+++ b/clusters/control-plane/flux-system/kustomization.yaml
@@ -4,4 +4,5 @@ resources:
   - gotk-components.yaml
   - gotk-sync.yaml
   - ../crossplane-source.yaml
+  - ../crossplane-platform-source.yaml
   - ../platform-source.yaml
