--- a/control-plane-crossplane/providers/functions.yaml
+++ b/control-plane-crossplane/providers/functions.yaml
@@ -4,11 +4,11 @@ kind: Function
 metadata:
   name: function-go-templating
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/function-go-templating:v0.6.0
+  package: xpkg.crossplane.io/crossplane-contrib/function-go-templating:v0.6.0
 ---
 apiVersion: pkg.crossplane.io/v1beta1
 kind: Function
 metadata:
   name: function-auto-ready
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/function-auto-ready:v0.2.1
+  package: xpkg.crossplane.io/crossplane-contrib/function-auto-ready:v0.2.1
