--- a/control-plane-crossplane/providers/providers.yaml
+++ b/control-plane-crossplane/providers/providers.yaml
@@ -4,18 +4,18 @@ kind: Provider
 metadata:
   name: provider-gcp-beta-container
 spec:
-  package: xpkg.upbound.io/upbound/provider-gcp-beta-container:v0.5.1
+  package: xpkg.crossplane.io/upbound/provider-gcp-beta-container:v0.5.1
 ---
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
   name: provider-helm
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/provider-helm:v0.21.0
+  package: xpkg.crossplane.io/crossplane-contrib/provider-helm:v0.21.0
 ---
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
   name: provider-kubernetes
 spec:
-  package: xpkg.upbound.io/upbound/provider-kubernetes:v0.17.1
+  package: xpkg.crossplane.io/crossplane-contrib/provider-kubernetes:v0.18.0
