--- a/platform/crossplane/functions/function-auto-ready.yaml
+++ b/platform/crossplane/functions/function-auto-ready.yaml
@@ -3,4 +3,4 @@ kind: Function
 metadata:
   name: function-auto-ready
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/function-auto-ready:v0.5.0
+  package: xpkg.crossplane.io/crossplane-contrib/function-auto-ready:v0.5.0
