--- a/platform/crossplane/functions/function-environment-configs.yaml
+++ b/platform/crossplane/functions/function-environment-configs.yaml
@@ -3,4 +3,4 @@ kind: Function
 metadata:
   name: function-environment-configs
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/function-environment-configs:v0.4.0
+  package: xpkg.crossplane.io/crossplane-contrib/function-environment-configs:v0.4.0
