--- a/platform/crossplane/providers/gcp-provider-iam.yaml
+++ b/platform/crossplane/providers/gcp-provider-iam.yaml
@@ -4,4 +4,4 @@ kind: Provider
 metadata:
   name: provider-gcp-iam
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/provider-gcp-iam:v1.12.1
+  package: xpkg.crossplane.io/crossplane-contrib/provider-gcp-iam:v1.12.1
