--- a/platform/crossplane/providers/github-provider.yaml
+++ b/platform/crossplane/providers/github-provider.yaml
@@ -3,7 +3,7 @@ kind: Provider
 metadata:
   name: provider-upjet-github
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/provider-upjet-github:v0.18.0
+  package: xpkg.crossplane.io/crossplane-contrib/provider-upjet-github:v0.18.0
   runtimeConfigRef:
     apiVersion: pkg.crossplane.io/v1beta1
     kind: DeploymentRuntimeConfig
