--- a/bootstrap/kind/crossplane/providerconfigs/providerconfig-gke-control-plane.yaml
+++ b/bootstrap/kind/crossplane/providerconfigs/providerconfig-gke-control-plane.yaml
@@ -1,11 +1,11 @@
 apiVersion: kubernetes.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
-  name: gke-mgmt-cluster-k8s-config
+  name: gke-control-plane-cluster-k8s-config
 spec:
   credentials:
     source: Secret
     secretRef:
       namespace: crossplane-system
-      name: ${GKE_MGMT_CLUSTER}-kubeconfig
+      name: ${GKE_CONTROL_PLANE_CLUSTER}-kubeconfig
       key: kubeconfig
