--- a/bootstrap/kind/flux/crossplane-source.yaml
+++ b/bootstrap/kind/flux/crossplane-source.yaml
@@ -13,6 +13,19 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: crossplane-install
+  namespace: flux-system
+spec:
+  interval: 10m
+  path: "./bootstrap/kind/crossplane/install"
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: crossplane-config
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: crossplane-base
   namespace: flux-system
 spec:
@@ -22,6 +35,8 @@ spec:
   sourceRef:
     kind: GitRepository
     name: crossplane-config
+  dependsOn:
+    - name: crossplane-install
   postBuild:
     substituteFrom:
       - kind: ConfigMap
