--- a/bootstrap/kind/crossplane/base/compositions/gke-cluster-xrd.yaml
+++ b/bootstrap/kind/crossplane/base/compositions/gke-cluster-xrd.yaml
@@ -27,7 +27,7 @@ spec:
                     description: "Name of the GKE cluster"
                   clusterType:
                     type: string
-                    enum: ["control-plane", "apps"]
+                    enum: ["control-plane", "workload"]
                     description: "Type of cluster - control-plane (management) or apps (applications)"
                   projectId:
                     type: string
