fix crossplane helm release and notification provider

--- a/bootstrap/kind/crossplane/base/compositions/control-plane-composition.yaml
+++ b/bootstrap/kind/crossplane/base/compositions/control-plane-composition.yaml
@@ -148,10 +148,10 @@ spec:
               namespace: crossplane-system
               chart:
                 name: crossplane
-                url: https://charts.crossplane.io/stable
+                repository: https://charts.crossplane.io/stable
                 version: "2.0.0-rc.1"
+  # TODO - hardcoded crossplane version above
 
   - step: ready
     functionRef:
       name: function-auto-ready
-
