--- a/bootstrap/kind/flux/notification-provider.yaml
+++ b/bootstrap/kind/flux/notification-provider.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   type: github
   address: https://api.github.com
+  channel: olga-mir/playground
   secretRef:
     name: github-webhook-token
 ---
