--- a/tasks/test-and-debug.yaml
+++ b/tasks/test-and-debug.yaml
@@ -48,14 +48,14 @@ tasks:
       - kubectl --context={{.CONTEXT}} get pod -n crossplane-system 2>/dev/null || echo "No providers found"
 
   get-gke-credentials:
-    desc: "Get credentials for GKE clusters (usage: task debug:get-gke-credentials CLUSTER=control-plane)"
+    desc: "Get credentials for GKE clusters"
     vars:
       CLUSTER: '{{default "control-plane" .CLUSTER}}'
       PROJECT_ID: '{{default "apps-398909" .PROJECT_ID}}'
       ZONE: '{{default "australia-southeast1-a" .ZONE}}'
     cmds:
       - gcloud container clusters get-credentials {{.CLUSTER}} --zone={{.ZONE}} --project={{.PROJECT_ID}}
-      - echo "Credentials configured for cluster: {{.CLUSTER}}"
+      - echo "Credentials configured for cluster {{.CLUSTER}}"
       - kubectl config current-context
 
   get-all-gke-credentials:
