move secret creation after crossplane install

--- a/bootstrap/kind/crossplane/providerconfigs/kustomization.yaml
+++ b/bootstrap/kind/crossplane/providerconfigs/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 
 resources:
   - providers-config.yaml
-  - providerconfig-gke-control-plane.yaml
+  # TODO this is kubeconfig secret needed for k8s provider (maybe not even needed - validate later)
+  #- providerconfig-gke-control-plane.yaml
