add securityPostureConfig to avoid conflicts and un-synced state

--- a/bootstrap/kind/crossplane/base/compositions/control-plane-composition.yaml
+++ b/bootstrap/kind/crossplane/base/compositions/control-plane-composition.yaml
@@ -49,6 +49,8 @@ spec:
               enableAutopilot: false
               releaseChannel:
                 channel: RAPID
+              securityPostureConfig:
+                mode: DISABLED
             writeConnectionSecretToRef:
               namespace: crossplane-system
               name: {{ .observed.composite.resource.spec.parameters.clusterName }}-kubeconfig
