--- a/tasks/test-and-debug.yaml
+++ b/tasks/test-and-debug.yaml
@@ -80,5 +80,5 @@ tasks:
       - echo "kubectl apply -f https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.3.0/experimental-install.yaml"
       - echo "helm template test oci://ghcr.io/kagent-dev/kagent/helm/kagent --namespace kagent --values test-values.yaml"
       - echo "while :; do flux get all -A && sleep 5; done"
+      - echo "while :; do k get gkeclusters.platform.tornado-demo.io && kubectl --context=kind-kind-test-cluster describe gkeclusters.platform.tornado-demo.io control-plane-cluster | tail -2 && sleep 5; done"
       - echo "kubectl --context kind-kind-test-cluster annotate kustomization crossplane-composite-resources -n flux-system reconcile.fluxcd.io/requestedAt=$(date '+%Y-%m-%dT')"
-
