temp script for manual flux provisioning

--- a/bootstrap/kind/flux/notification-provider.yaml
+++ b/bootstrap/kind/flux/notification-provider.yaml
@@ -8,7 +8,7 @@ spec:
   type: githubdispatch
   address: https://github.com/olga-mir/playground
   secretRef:
-    name: platform-secrets
+    name: github-webhook-token
 ---
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Alert
