add test webhook alert

--- a/bootstrap/kind/flux/kustomization.yaml
+++ b/bootstrap/kind/flux/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
   - crossplane-source.yaml
   - crossplane-providers-health.yaml
   - notification-provider.yaml
+  - test-webhook-provider.yaml
