--- a/.github/workflows/test-webhook.yaml
+++ b/.github/workflows/test-webhook.yaml
@@ -4,6 +4,11 @@ on:
   repository_dispatch:
     types: [Kustomization/crossplane-composite-resources.flux-system]
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   test-notification:
     runs-on: ubuntu-latest
