--- a/clusters/control-plane/kustomization.yaml
+++ b/clusters/control-plane/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - crossplane-install.yaml
   - crossplane-source.yaml
   - crossplane-platform-source.yaml
   - platform-source.yaml
