--- a/control-plane-crossplane/workload-cluster-configs/kustomization.yaml
+++ b/control-plane-crossplane/workload-cluster-configs/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - control-plane-cluster.yaml
+  - apps-dev-provider-config.yaml
+  - apps-dev-flux-bootstrap.yaml
